<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".Activity.MainActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/custome_toolbar" />

    <LinearLayout
        android:id="@+id/rl_ads"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="180dp"
            android:src="@drawable/top" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/btn_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl_ads"
        android:layout_marginTop="@dimen/_20sdp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:id="@+id/am_cvScreenCast"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="25dp"
                    app:cardBackgroundColor="@color/button_color_1"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="7dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_gravity="center"
                        android:fontFamily="@font/gt_walsheimpro_regular"
                        android:gravity="center_horizontal"
                        android:text="@string/screen_cast"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/am_cvHowToConnect"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginEnd="25dp"
                    android:layout_marginBottom="25dp"
                    app:cardBackgroundColor="@color/button_color_1"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="7dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_gravity="center"
                        android:fontFamily="@font/gt_walsheimpro_regular"
                        android:gravity="center_horizontal"
                        android:text="@string/how_to_connect"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/am_cvSettings"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="25dp"
                    app:cardBackgroundColor="@color/button_color_1"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="7dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_gravity="center"
                        android:fontFamily="@font/gt_walsheimpro_regular"
                        android:gravity="center_horizontal"
                        android:text="@string/settings"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/am_cvAbout"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginEnd="25dp"
                    android:layout_marginBottom="25dp"
                    app:cardBackgroundColor="@color/button_color_1"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="7dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_gravity="center"
                        android:fontFamily="@font/gt_walsheimpro_regular"
                        android:gravity="center_horizontal"
                        android:text="@string/about"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</RelativeLayout>