<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".Activity.MainActivity">

    <RelativeLayout
        android:id="@+id/rl_toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp">

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/_15sdp"
            android:src="@drawable/ic_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/screen_cast"
            android:textColor="@color/black"
            android:textSize="@dimen/_15ssp"
            android:textStyle="bold" />

    </RelativeLayout>

    <View
        android:id="@+id/line_toolbar"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@id/rl_toolbar"
        android:background="#000000" />

    <LinearLayout
        android:id="@+id/rl_ads"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/line_toolbar"
        android:layout_marginBottom="@dimen/_10sdp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="170dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:src="@drawable/top" />

        <include
            android:id="@+id/toolbar"
            layout="@layout/custome_toolbar" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/btn_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl_ads"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/gt_walsheimpro_regular"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/select_connection"
            android:textColor="@color/black"
            android:textSize="@dimen/_17sdp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="10dp"
                android:paddingBottom="10dp">

                <androidx.cardview.widget.CardView
                    android:id="@+id/am_cvScreenCast"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="25dp"
                    app:cardBackgroundColor="@color/button_color_1"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="7dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_gravity="center"
                        android:fontFamily="@font/gt_walsheimpro_regular"
                        android:gravity="center_horizontal"
                        android:text="@string/screen_cast"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/am_cvWebBrowser"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginEnd="25dp"
                    app:cardBackgroundColor="@color/button_color_1"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="7dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_gravity="center"
                        android:fontFamily="@font/gt_walsheimpro_regular"
                        android:gravity="center_horizontal"
                        android:text="@string/web_browser"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </androidx.cardview.widget.CardView>

            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</RelativeLayout>